src/test/deca/codegen/valid/Objet/ClassDeclaration-2F0M.deca
// Description:
//      Program declaring a class with 2 field and 0 method
//
// Result:
//      x=0, y=1
//
// History:
//      created on 17/1/2022

class C {
	int x;
	int y=1;
}

{
    C c = new C();
    println("x=", x, " y=", y);
}
